// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AMP Ads Snapshots should correctly render an AMP leaderboard ad 1`] = `
.amp-geo-pending .emotion-0,
.amp-geo-group-gbOrUnknown .emotion-0 {
  display: none;
  visibility: hidden;
}

.emotion-1 {
  background-color: #E6E8EA;
}

.emotion-2 {
  display: none;
  visibility: hidden;
}

@media (min-width: 20rem) {
  .emotion-2 {
    min-height: 5.1875rem;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    -webkit-justify-content: center;
    justify-content: center;
    visibility: visible;
    padding: 1rem 0;
  }
}

@media (min-width: 63rem) {
  .emotion-2 {
    min-height: 18.6875rem;
    padding: 1.5rem 0;
  }
}

.emotion-3 {
  margin: 0 auto;
  text-align: center;
}

.emotion-4 {
  font-size: 0.75rem;
  line-height: 1rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  color: #5A5A5A;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  display: block;
  padding: 0.5rem 0;
  text-align: right;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-4 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-4 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

.emotion-4:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div>
  <div
    amp-access="toggles.ads.enabled"
    amp-access-hide="true"
    class="emotion-0"
  >
    <section
      aria-hidden="true"
      aria-label="Publicités"
      class="emotion-1"
      data-e2e="advertisement"
      role="region"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <a
            class="emotion-4"
            dir="ltr"
            href="https://www.bbc.com/usingthebbc/cookies/"
            tabindex="-1"
          >
            Publicités
          </a>
          <amp-ad
            data-a4a-upgrade-type="amp-ad-network-doubleclick-impl"
            data-amp-slot-index="0"
            data-block-on-consent="default"
            data-multi-size="320x50,300x50"
            data-multi-size-validation="false"
            data-npa-on-unknown-consent="true"
            data-slot="/4817/bbccom.test.site.amp.news"
            height="50"
            json="{"targeting":{"slot":"leaderboard","asset_type":"index","channel":"afrique"}}"
            media="(max-width: 62.9375rem)"
            type="doubleclick"
            width="320"
          />
          <amp-ad
            data-a4a-upgrade-type="amp-ad-network-doubleclick-impl"
            data-amp-slot-index="0"
            data-block-on-consent="default"
            data-multi-size="970x250,728x90"
            data-multi-size-validation="false"
            data-npa-on-unknown-consent="true"
            data-slot="/4817/bbccom.test.site.amp.news"
            height="250"
            json="{"targeting":{"slot":"leaderboard","asset_type":"index","channel":"afrique"}}"
            media="(min-width: 63rem)"
            type="doubleclick"
            width="970"
          />
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`AMP Ads Snapshots should correctly render an AMP mpu ad 1`] = `
.amp-geo-pending .emotion-0,
.amp-geo-group-gbOrUnknown .emotion-0 {
  display: none;
  visibility: hidden;
}

.emotion-1 {
  background-color: #E6E8EA;
}

.emotion-2 {
  display: none;
  visibility: hidden;
  padding: 0;
}

@media (min-width: 18.75rem) {
  .emotion-2 {
    min-height: 17.6875rem;
    padding: 1rem 0 0.5rem 0;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    -webkit-justify-content: center;
    justify-content: center;
    visibility: visible;
  }
}

.emotion-3 {
  margin: 0 auto;
  text-align: center;
}

.emotion-4 {
  font-size: 0.75rem;
  line-height: 1rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  color: #5A5A5A;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  display: block;
  padding: 0.5rem 0;
  text-align: right;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-4 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-4 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

.emotion-4:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div>
  <div
    amp-access="toggles.ads.enabled"
    amp-access-hide="true"
    class="emotion-0"
  >
    <section
      aria-hidden="true"
      aria-label="Publicités 2"
      class="emotion-1"
      data-e2e="advertisement"
      role="region"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <a
            class="emotion-4"
            dir="ltr"
            href="https://www.bbc.com/usingthebbc/cookies/"
            tabindex="-1"
          >
            Publicités
          </a>
          <amp-ad
            data-a4a-upgrade-type="amp-ad-network-doubleclick-impl"
            data-amp-slot-index="0"
            data-block-on-consent="default"
            data-multi-size="300x250"
            data-multi-size-validation="false"
            data-npa-on-unknown-consent="true"
            data-slot="/4817/bbccom.test.site.amp.news"
            height="250"
            json="{"targeting":{"slot":"mpu","asset_type":"index","channel":"afrique"}}"
            type="doubleclick"
            width="300"
          />
        </div>
      </div>
    </section>
  </div>
</div>
`;
